--- a/src/app/list-upload/list-upload.component.html
+++ b/src/app/list-upload/list-upload.component.html
@@ -34,7 +34,7 @@
                 <button (click)="deleteDirectory(file.name)" style="margin-left: 5px;">
                     <i class="far fa-trash-alt"></i>
                 </button>
-
+                <button (click)="download(file.name)" style="margin-left: 5px;">Download</button>
             </div>
 
         </div>
