--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
 <div class="height:100px"></div>
 
+<div class="backgroundHome"></div>
+
 
 <div class="footer" style="width:100%; height: 300px;margin-bottom: 0px;">
 
