home and notes frontend changed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,26 @@
 <div class="height:100px"></div>
 
-<div class="backgroundHome"></div>
+<div class="desktop" style="width: 100%;">
+    <img src="../../assets/pictures/network-4851079_1280.webp" style="width:100%;height:770px">
 
 
-<div class="footer" style="width:100%; height: 300px;margin-bottom: 0px;">
+    <div class="animate seven">
+        <span>C</span><span>L</span><span>O</span><span>U</span>
+        <span>D</span><span>D</span><span>R</span><span>I</span><span>V</span><span>E</span><span>N</span>
+
+    </div>
+    <div class="centered">
+        <p>“I don’t need a hard disk in my computer if I can get to the server faster , carrying around these non-connected computers is byzantine by comparison.” </p>
+
+    </div>
+    <div class="centered1">
+
+        <p>~ Steve Jobs, Co-founder, CEO and Chairman of Apple Inc.</p>
+    </div>
+
+</div>
+
+<div class="footer" style="width:100%; margin-bottom: 0px;">
 
     <div class="container-fluid">
 
@@ -41,7 +58,8 @@
 
         </div>
         <div class="text-center">
-            <p style="font-size: 30px;font-weight: 500;color: white;">Copyright</p>
+            <p style="font-size: 30px;font-weight: 500;padding-bottom:20px;color: white;background-color: #13263a;">Copyright</p>
+
         </div>
     </div>
 </div>
