--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -3,23 +3,23 @@ html,
 body {}
 
 header {
-    padding: 2px 0;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, .2);
+    padding: 1px 0;
     position: fixed;
     width: 100%;
-    z-index: 2;
-    background-image: linear-gradient(0deg, #2e5cb8, #3385ff);
+    z-index: 4;
+    background-color: #13263a;
+    height: 65px;
 }
 
 .container {
-    padding: 0 20px;
-    max-width: 960px;
+    max-width: 80%;
     margin: 0 auto;
 }
 
 .logo-box {
     float: left;
     margin-right: 20px;
+    margin-top: 10px;
 }
 
 .logo-box a {
@@ -462,3 +462,10 @@ nav a:hover:after {
     background: url("https://benmarshall.me/wp-content/uploads/2018/08/background.gif");
     padding: 4rem;
 }
+
+.activeclass {
+    text-decoration: underline;
+    font-size: 18px;
+}
+
+.homeclass {}
