--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,27 +1,25 @@
-<div style="background-color:#EBF7FB; width: 100%; height: 100vh; overflow:auto; ">
-    <div style="height:50px;"></div>
-    <div class="wrapperhead" style="padding-top: 50px;">
-        <div class="wrapper" style="padding-top:10px">
+<div class="wrapperhead" style="width:100%;height: 100%;">
 
-            <div class="nav-brand text-center">
-                <p class="uploadlabel" style='margin-bottom:20px; text-align: center; color:#005ce6;font-weight: 650; font-size: 35px;text-shadow:2px 2px 2px #aaaaaa;'>Dashboard</p>
-            </div>
+    <div class="wrapper" style="position: sticky">
 
-            <h5 class="text-center" style="color:#004de6 ;font-weight: 600;font-size: 25px;">Welcome, {{ uname }}</h5>
-            <div class="text-center" style="margin-top:10px ;margin-bottom: 10px;">
-                <img style="width: 200px; border-radius: 50%;" [src]="profile[1] ? profile[1].url : 'https://www.w3schools.com/howto/img_avatar.png'">
+        <div class="nav-brand text-center">
+            <p class="uploadlabel" style='margin-bottom:20px; text-decoration: underline;text-align: center;color: white; font-weight: 650; font-size: 50px; font-family: Special Elite;'>Dashboard</p>
+        </div>
 
-            </div>
-
-
-            <ul class="text-center" style="list-style-type: none;margin-top:20px">
-                <li><a routerLink='/user-profile' class="uploadlink" style="margin-right: 30px;font-size: 20px;"><button class="btn-2 uploadbutton" style="width:180px;height:50px;font-size:15px;border-radius: 1rem;">Edit profile</button></a></li>
-                <li>
-                    <a routerLink='/upload' class="uploadlink" style="margin-right: 30px;font-size: 20px;"><button class="btn-2 uploadbutton" style="width:180px;height:50px;font-size:15px;border-radius: 1rem;">Upload Files</button></a>
-                </li>
-            </ul>
+        <h5 class="text-center" style="color:white;text-shadow: 1px 1px 6px blue ;font-weight: normal;font-size: 30px;font-family: Special Elite;">Welcome, {{ uname }}</h5>
+        <div class="text-center" style="margin-top:10px ;margin-bottom: 10px;">
+            <img style="width: 200px; border-radius: 50%;" [src]="profile[1] ? profile[1].url : 'https://www.w3schools.com/howto/img_avatar.png'">
 
         </div>
 
+
+        <ul class="text-center" style="list-style-type: none;margin-top:40px">
+            <li><a routerLink='/user-profile' class="uploadlink" style="margin-right: 30px;font-size: 20px;"><button class="btn-2 uploadbutton" style="width:180px;height:50px;font-size:18px;border-radius: 1rem;">Edit profile</button></a></li>
+            <li>
+                <a routerLink='/upload' class="uploadlink" style="margin-right: 30px;font-size: 20px;"><button class="btn-2 uploadbutton" style="width:180px;height:50px;font-size:18px;border-radius: 1rem;">Upload Files</button></a>
+            </li>
+        </ul>
+
     </div>
-    <div>
+
+</div>
