--- a/src/app/form-upload/form-upload.component.html
+++ b/src/app/form-upload/form-upload.component.html
@@ -1,87 +1,70 @@
-<div style="background-color:#EBF7FB; width: 100%; height: 100vh; overflow:auto; ">
-    <div style="height:80px;"></div>
-    <div>
+<!-- just to make scrolling effect possible -->
+<div class="wrapperhead" style="width:100%;height:100%">
+    <div class="wrapper">
 
-        <!-- just to make scrolling effect possible -->
-        <div class="wrapperhead" style="padding-top: 10px;">
-            <div class="wrapper">
-
-                <div *ngIf="parent!=undefined" class="text-center">
-                    <h5
-                        style="font-weight: 600;color: #004de6;font-size: 25px;text-shadow:2px 2px 2px #aaaaaa;margin-bottom: 20px;">
-                        Current Directory: {{ parent }} </h5>
-                </div>
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-6" style="background-color:#ccebff; border-radius: 1rem;">
-                            <p class="uploadlabel" *ngIf="parent!=undefined"
-                                style='margin-top:20px;margin-bottom:20px; text-align: center; color:#004de6; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>
-                                Upload Files</p>
+        <div *ngIf="parent!=undefined" class="text-center">
+            <h5 style="font-weight: 600;color: #004de6;font-size: 25px;text-shadow:2px 2px 2px #aaaaaa;margin-bottom: 20px;">
+                Current Directory: {{ parent }} </h5>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6" style="background-color:#ccebff; border-radius: 1rem;">
+                    <p class="uploadlabel" *ngIf="parent!=undefined" style='margin-top:20px;margin-bottom:20px; text-align: center; color:#004de6; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>
+                        Upload Files</p>
 
 
-                            <div class="text-center" *ngIf="parent!=undefined">
+                    <div class="text-center" *ngIf="parent!=undefined">
 
-                                <input type="file" id="file" (change)="uploadFile($event.target.files)" multiple />
-                                <label for="file"
-                                    style="width:180px;height:50px;font-size:15px;border-radius: 1rem;margin-right: 10px;"
-                                    class="btn-1">Select Files</label>
+                        <input type="file" id="file" (change)="uploadFile($event.target.files)" multiple />
+                        <label for="file" style="width:180px;height:50px;font-size:15px;border-radius: 1rem;margin-right: 10px;" class="btn-1">Select Files</label>
 
 
-                                <input id="folder" #folderInput type="file" (change)="filesPicked(folderInput.files)"
-                                    webkitDirectory />
-                                <label for="folder" style="width:200px;height:50px;font-size:15px;border-radius: 1rem;"
-                                    class="btn-1">Select Folder</label>
+                        <input id="folder" #folderInput type="file" (change)="filesPicked(folderInput.files)" webkitDirectory />
+                        <label for="folder" style="width:200px;height:50px;font-size:15px;border-radius: 1rem;" class="btn-1">Select Folder</label>
 
-                                <p style="font-size: 20px;font-weight: 500;color:#004de6">Or</p>
-                                <p style="font-size: 20px;font-weight: 500;color:#004de6">Drag Your Files Below:</p>
+                        <p style="font-size: 20px;font-weight: 500;color:#004de6">Or</p>
+                        <p style="font-size: 20px;font-weight: 500;color:#004de6">Drag Your Files Below:</p>
 
 
 
 
-                                <div class="uploadfilecontainer" (click)="fileInput.click()" appDragDrop
-                                    (onFileDropped)="uploadFile($event)">
-                                    <input hidden type="file" #fileInput (change)="uploadFile($event.target.files)">
+                        <div class="uploadfilecontainer" (click)="fileInput.click()" appDragDrop (onFileDropped)="uploadFile($event)">
+                            <input hidden type="file" #fileInput (change)="uploadFile($event.target.files)">
 
-                                </div>
-
-                                <button class="btn-2 uploadbutton"
-                                    style="width:180px;height:50px;font-size:15px;border-radius: 1rem;"
-                                    [disabled]="!files" (click)="upload()">Upload</button>
-                                <br />
-
-                                <progress *ngIf="flag==1" id="progress" value="10"></progress>
-
-
-                            </div>
                         </div>
-                        <div class="col-lg-6">
-                            <div class="text-center" *ngIf="parent!=undefined">
-                                <div class="files-list" *ngFor="let file of files;let i= index">
-                                    <p> {{ file.name }} </p>
-                                    <button class="delete-file" (click)="deleteAttachment(i)">
+
+                        <button class="btn-2 uploadbutton" style="width:180px;height:50px;font-size:15px;border-radius: 1rem;" [disabled]="!files" (click)="upload()">Upload</button>
+                        <br />
+
+                        <progress *ngIf="flag==1" id="progress" value="10"></progress>
+
+
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="text-center" *ngIf="parent!=undefined">
+                        <div class="files-list" *ngFor="let file of files;let i= index">
+                            <p> {{ file.name }} </p>
+                            <button class="delete-file" (click)="deleteAttachment(i)">
                                         <img src="../../assets/Recycle_Bin_Full.png">
                                     </button>
-                                </div>
-
-
-
-
-                            </div>
-
                         </div>
+
+
+
+
                     </div>
-                    <app-list-upload (childEvent)="msgFromChild($event)"></app-list-upload>
 
-
-
-                    <!-- <button class="btn-2" [disabled]="!files" (click)="upload()">Upload Files</button> -->
                 </div>
             </div>
+            <app-list-upload (childEvent)="msgFromChild($event)"></app-list-upload>
+
+
+
+            <!-- <button class="btn-2" [disabled]="!files" (click)="upload()">Upload Files</button> -->
         </div>
     </div>
-    <div style="height: 50px;"></div>
 </div>
-
 
 
 
