--- a/src/app/form-upload/form-upload.component.html
+++ b/src/app/form-upload/form-upload.component.html
@@ -2,15 +2,17 @@
 <div class="wrapperhead" style="width:100%;height:100%">
     <div class="wrapper">
 
-        <div *ngIf="parent!=undefined" class="text-center">
-            <h5 style="font-weight: 600;color: #004de6;font-size: 25px;text-shadow:2px 2px 2px #aaaaaa;margin-bottom: 20px;">
-                Current Directory: {{ parent }} </h5>
+        <div *ngIf="parent!=undefined">
+            <div style="width:90%;height: 25px;margin:10px auto;overflow-x: auto;overflow-y: hidden;border:1px solid #13263a">
+                <p style="font-weight: normal;color: #13263a;font-size: 18px;background-color:white;">&nbsp;
+                    <i class="fas fa-folder-open" style="color:yellow;border: 0.2px solid black;"></i> &nbsp; <i class="fas fa-angle-right"> </i> &nbsp; {{ parent }} </p>
+            </div>
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6" style="background-color:#ccebff; border-radius: 1rem;">
-                    <p class="uploadlabel" *ngIf="parent!=undefined" style='margin-top:20px;margin-bottom:20px; text-align: center; color:#004de6; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>
-                        Upload Files</p>
+                <div class="col-lg-6" style="background-color:transparent; ">
+                    <p class="uploadlabel" *ngIf="parent!=undefined" style='margin-top:20px;margin-bottom:20px; text-align: center; color:white; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>
+                        Upload Files <i class="fa fa-upload"></i></p>
 
 
                     <div class="text-center" *ngIf="parent!=undefined">
