--- a/src/app/form-upload/form-upload.component.html
+++ b/src/app/form-upload/form-upload.component.html
@@ -1,31 +1,31 @@
 <!-- just to make scrolling effect possible -->
-<div class="wrapperhead" style="width:100%;height:100%">
+<div class="wrapperhead" style="width:98%;height:100%;">
     <div class="wrapper">
 
         <div *ngIf="parent!=undefined">
-            <div style="width:90%;height: 25px;margin:10px auto;overflow-x: auto;overflow-y: hidden;border:1px solid #13263a">
-                <p style="font-weight: normal;color: #13263a;font-size: 18px;background-color:white;">&nbsp;
-                    <i class="fas fa-folder-open" style="color:yellow;border: 0.2px solid black;"></i> &nbsp; <i class="fas fa-angle-right"> </i> &nbsp; {{ parent }} </p>
+            <div style="z-index:4;width:97%;height: 30px;overflow-x: auto;overflow-y: hidden;border:1px solid #13263a;position:fixed;top:9%;left:1%;background-color: #d8e5f3;">
+                <p style="font-weight: normal;color: #13263a;font-size: 18px;background-color:#d8e5f3;">&nbsp;
+                    <img style="width: 20px;height: 25px;" src="../../assets/pictures/folder.png"> &nbsp; <i class="fas fa-angle-right"> </i> &nbsp; {{ parent }} </p>
             </div>
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6" style="background-color:transparent; ">
-                    <p class="uploadlabel" *ngIf="parent!=undefined" style='margin-top:20px;margin-bottom:20px; text-align: center; color:white; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>
+                <div class="col-lg-6" style="background-color:transparent;border-right:2px solid black; ">
+                    <p class="uploadlabel" *ngIf="parent!=undefined" style='margin-top:30px;margin-bottom:20px;text-decoration: underline; text-align: center; color:#13263a; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>
                         Upload Files <i class="fa fa-upload"></i></p>
 
 
                     <div class="text-center" *ngIf="parent!=undefined">
 
-                        <input type="file" id="file" (change)="uploadFile($event.target.files)" multiple />
-                        <label for="file" style="width:180px;height:50px;font-size:15px;border-radius: 1rem;margin-right: 10px;" class="btn-1">Select Files</label>
+                        <input type="file" (change)="uploadFile($event.target.files)" multiple />
+                        <label for="file" style="font-weight: normal;" class="btn-1">Select Files</label>
 
 
                         <input id="folder" #folderInput type="file" (change)="filesPicked(folderInput.files)" webkitDirectory />
-                        <label for="folder" style="width:200px;height:50px;font-size:15px;border-radius: 1rem;" class="btn-1">Select Folder</label>
+                        <label for="folder" style="width: 200px;" class="btn-1">Select Folder</label>
 
-                        <p style="font-size: 20px;font-weight: 500;color:#004de6">Or</p>
-                        <p style="font-size: 20px;font-weight: 500;color:#004de6">Drag Your Files Below:</p>
+                        <p style="font-size: 20px;font-weight: normal;color:#13263a">Or</p>
+                        <p style="font-size: 20px;font-weight: normal;color:#13263a">Drag Your Files Below &nbsp;<i class="fas fa-arrow-down"></i></p>
 
 
 
@@ -35,15 +35,16 @@
 
                         </div>
 
-                        <button class="btn-2 uploadbutton" style="width:180px;height:50px;font-size:15px;border-radius: 1rem;" [disabled]="!files" (click)="upload()">Upload</button>
+                        <button class="btn-2 uploadbutton" style="width:180px;height:50px;font-size:15px;" [disabled]="!files" (click)="upload()">Upload</button>
                         <br />
 
-                        <progress *ngIf="flag==1" id="progress" value="10"></progress>
+                        <!--  <progress *ngIf="flag==1" id="progress" value="10"></progress>-->
 
 
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6"><br/>
+                    <p class="text-center" style="font-size: 20px;font-weight: 500;">You Want To Upload Following Files Or Folders &nbsp;<i class="fas fa-arrow-down"></i></p>
                     <div class="text-center" *ngIf="parent!=undefined">
                         <div class="files-list" *ngFor="let file of files;let i= index">
                             <p> {{ file.name }} </p>
@@ -65,6 +66,7 @@
 
             <!-- <button class="btn-2" [disabled]="!files" (click)="upload()">Upload Files</button> -->
         </div>
+        <div style="height: 20px;"></div>
     </div>
 </div>
 
