--- a/src/app/list-upload/list-upload.component.html
+++ b/src/app/list-upload/list-upload.component.html
@@ -1,52 +1,84 @@
-<div *ngIf="level>0" class="text-center" style="margin-top:20px">
-    <button class="button btn-info" style="width:150px;height:40px;font-size:15px;border-radius: 1rem;" *ngIf='showFile' (click)='showFiles(false)'>Hide Files</button>
+<div *ngIf="level>0" class="text-center">
+    <div style="display:inline-block">
+        <div class="arrow-container animated fadeInDown" *ngIf='showFile' (click)='showFiles(false)'>
+            <div class="arrow-2">
+                <i style="
+            font-size: 40px;
+            text-align: center;
+            vertical-align: middle;
+            margin-top:10px;
+            color: #006064;" class="fa fa-angle-up"></i>
+            </div>
+            <div class="arrow-1 animated hinge infinite zoomIn"></div>
 
-    <button class="button btn-info " style="width:150px;height:40px;font-size:15px;border-radius: 1rem;" *ngIf='!showFile' (click)='showFiles(true)'>Show Files</button>
+        </div>
+    </div>
+    <div class="arrow-container animated fadeInDown" *ngIf='!showFile' (click)='showFiles(true)'>
+        <div class="arrow-2">
+            <i style="
+            font-size: 40px;
+            text-align: center;
+            vertical-align: middle;
+            margin-top:10px;
+            color: #006064;" class="fa fa-angle-down"></i>
+        </div>
+        <div class="arrow-1 animated hinge infinite zoomIn"></div>
+    </div>
+
 </div>
 <div *ngIf="level==0" class="panel-heading">
-    <b style="color:#004de6; font-size: 25px;text-shadow:2px 2px 2px #aaaaaa;">Root directory</b><br />
-    <p style="color:#004de6;"><i>In this directory you can securely store your all files.</i></p>
+    <b style="color:#13263a; font-size: 25px;text-shadow:2px 2px 2px #aaaaaa;">Root directory</b><br />
+    <p style="color:#13263a;"><i>In this directory you can securely store your all files.</i></p>
     <button style="text-decoration: underline;cursor: pointer; " (click)="traverse(file)">{{ uname  }}</button>
 </div>
 <div *ngIf="level>0" [hidden]="!showFile">
 
     <div class="panel panel-primary">
         <div *ngIf="level>0" class="panel-heading">
-            <br />
-            <button class="button1 btn-info" style="width:120px;height:36px;font-size:15px;border-radius: 1rem;outline: none;margin-top:20px;margin-bottom:20px" (click)="revTraverse()">Back</button>
 
 
+            <button style="border: 0;background-color: white;" (click)="revTraverse()"><i class="back" style="width: 50px;height: 50px;margin-left:10px" class="fas fa-arrow-circle-left"></i></button>
+
+            <input type="text" id="dname" class="form-control" [(ngModel)]="dname" placeholder="Enter directory name" /><br />
+            <button (click)="createDirectory()" class="btn btn-primary">+ Create Directory</button>
+
             <br />
-            <h3 style="color: #004de6;text-shadow:2px 2px 2px #aaaaaa; ;">List of Files & directories</h3>
+
         </div>
 
-        <h5 style="color:#004de6">Directories:</h5><br />
 
-        <div *ngFor="let file of fileUploads | async">
+        <div *ngFor="let file of fileUploads | async" style="display: inline-block;">
             <div *ngIf="file.name.endsWith('/') && (file.name.split('/')).length==level+2 && file.name.startsWith(parent) ">
                 <!--First,third condition for directories-->
                 <!--Second condition for immediate children-->
-                <button style="text-decoration: underline;cursor: pointer;" (click)="traverse(file)">
+                <div class="dropdown">
+                    <button class="folder context-menu-one" (dblclick)="traverse(file)" (click)="background()">
+                  <img style="width: 40px;height: 45px;" src="../../assets/pictures/folder.png">
+                  <br/>
                     {{file.name}}
 
 
                 </button>
-                <button (click)="deleteDirectory(file.name)" style="margin-left: 5px;">
-                    <i class="far fa-trash-alt"></i>
-                </button>
-                <button (click)="download(file.name)" style="margin-left: 5px;">Download</button>
+                    <div class="dropdown-content">
+                        <button (click)="deleteDirectory(file.name)" style="width: 100%;">
+                          <i class="fas fa-trash-alt"></i>&nbsp;&nbsp;
+                          Delete
+                    </button>
+
+                        <button (click)="download(file.name)" style="width: 100%;">
+                          <i class="fas fa-download"></i> &nbsp; Download</button>
+                    </div>
+                </div>
+
             </div>
 
         </div>
         <br />
-        <hr style="border-top:2px solid #0055ff;" />
-        <h5 style="color:#004de6">Files:</h5><br />
         <div style="display: inline-block;margin-right: 20px;" *ngFor="let file of fileUploads | async">
             <app-details-upload [parent]="parent" [level]='level' [fileUpload]='file'></app-details-upload>
 
         </div>
     </div>
     <hr style="border-top:2px solid #0055ff;" />
-    <input type="text" id="dname" class="form-control" [(ngModel)]="dname" placeholder="Enter directory name" /><br />
-    <button (click)="createDirectory()" class="btn btn-primary">+ Create Directory</button>
+
 </div>
