--- a/src/app/form-upload/form-upload.component.html
+++ b/src/app/form-upload/form-upload.component.html
@@ -3,15 +3,15 @@
     <div class="wrapper">
 
         <div *ngIf="parent!=undefined">
-            <div style="z-index:4;width:97%;height: 30px;overflow-x: auto;overflow-y: hidden;border:1px solid #13263a;position:fixed;top:9%;left:1%;background-color: #d8e5f3;">
+            <div style="z-index:4;width:97%;height: 30px;overflow-x: auto;overflow-y: hidden;border:1px solid #13263a;position:fixed;top:8.5%;left:1%;background-color: #d8e5f3;">
                 <p style="font-weight: normal;color: #13263a;font-size: 18px;background-color:#d8e5f3;">&nbsp;
                     <img style="width: 20px;height: 25px;" src="../../assets/pictures/folder.png"> &nbsp; <i class="fas fa-angle-right"> </i> &nbsp; {{ parent }} </p>
             </div>
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6" style="background-color:transparent;border-right:2px solid black; ">
-                    <p class="uploadlabel" *ngIf="parent!=undefined" style='margin-top:30px;margin-bottom:20px;text-decoration: underline; text-align: center; color:#13263a; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>
+                <div class="col-lg-6" style="margin-top:20px;background-color:transparent;border-right:2px solid black;height: 500px;">
+                    <p class="uploadlabel" *ngIf="parent!=undefined" style='margin-bottom:20px;text-decoration: underline; text-align: center; color:#13263a; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>
                         Upload Files <i class="fa fa-upload"></i></p>
 
 
@@ -43,9 +43,9 @@
 
                     </div>
                 </div>
-                <div class="col-lg-6"><br/>
+                <div class="col-lg-6" style="height: 500px;margin-top: 20px;">
                     <p class="text-center" style="font-size: 20px;font-weight: 500;">You Want To Upload Following Files Or Folders &nbsp;<i class="fas fa-arrow-down"></i></p>
-                    <div class="text-center" *ngIf="parent!=undefined">
+                    <div style="height:430px;overflow-y: scroll; " class="text-center" *ngIf="parent!=undefined">
                         <div class="files-list" *ngFor="let file of files;let i= index">
                             <p> {{ file.name }} </p>
                             <button class="delete-file" (click)="deleteAttachment(i)">
@@ -60,6 +60,7 @@
 
                 </div>
             </div>
+
             <app-list-upload (childEvent)="msgFromChild($event)"></app-list-upload>
 
 
