--- a/src/app/form-upload/form-upload.component.html
+++ b/src/app/form-upload/form-upload.component.html
@@ -1,5 +1,5 @@
 <!-- just to make scrolling effect possible -->
-<div class="wrapperhead" style="width:98%;height:100%;">
+<div class="wrapperhead" style="width:100%;height:100%;">
     <div class="wrapper">
 
         <div *ngIf="parent!=undefined">
@@ -9,15 +9,15 @@
             </div>
         </div>
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6" style="margin-top:20px;background-color:transparent;border-right:2px solid black;height: 500px;">
-                    <p class="uploadlabel" *ngIf="parent!=undefined" style='margin-bottom:20px;text-decoration: underline; text-align: center; color:#13263a; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>
+            <div class="row" *ngIf="parent!=undefined">
+                <div class="col-lg-6" style="margin-top:43px;background-color:transparent;border-right:2px solid black;height: 500px;">
+                    <p class="uploadlabel" style='margin-bottom:20px;text-decoration: underline; text-align: center; color:#13263a; font-size: 30px;text-shadow:2px 2px 2px #aaaaaa;'>
                         Upload Files <i class="fa fa-upload"></i></p>
 
 
                     <div class="text-center" *ngIf="parent!=undefined">
 
-                        <input type="file" (change)="uploadFile($event.target.files)" multiple />
+                        <input id="file" type="file" (change)="uploadFile($event.target.files)" multiple />
                         <label for="file" style="font-weight: normal;" class="btn-1">Select Files</label>
 
 
@@ -43,13 +43,14 @@
 
                     </div>
                 </div>
-                <div class="col-lg-6" style="height: 500px;margin-top: 20px;">
-                    <p class="text-center" style="font-size: 20px;font-weight: 500;">You Want To Upload Following Files Or Folders &nbsp;<i class="fas fa-arrow-down"></i></p>
-                    <div style="height:430px;overflow-y: scroll; " class="text-center" *ngIf="parent!=undefined">
-                        <div class="files-list" *ngFor="let file of files;let i= index">
+                <div class="col-lg-6" style="height: 500px;margin-top: 43px">
+
+                    <div style="height:430px;overflow-y: scroll; " class="text-center " *ngIf="parent!=undefined ">
+                        <p class=" text-center " style="font-size: 20px;font-weight: 500; ">You Want To Upload Following Files Or Folders &nbsp;<i class="fas fa-arrow-down "></i></p>
+                        <div class="files-list " *ngFor="let file of files;let i=i ndex ">
                             <p> {{ file.name }} </p>
-                            <button class="delete-file" (click)="deleteAttachment(i)">
-                                        <img src="../../assets/Recycle_Bin_Full.png">
+                            <button class="delete-file " (click)="deleteAttachment(i) ">
+                                        <img src="../../assets/Recycle_Bin_Full.png ">
                                     </button>
                         </div>
 
@@ -61,13 +62,13 @@
                 </div>
             </div>
 
-            <app-list-upload (childEvent)="msgFromChild($event)"></app-list-upload>
+            <app-list-upload style="background-color: transparent;" (childEvent)="msgFromChild($event) "></app-list-upload>
 
 
 
-            <!-- <button class="btn-2" [disabled]="!files" (click)="upload()">Upload Files</button> -->
+            <!-- <button class="btn-2 " [disabled]="!files " (click)="upload() ">Upload Files</button> -->
         </div>
-        <div style="height: 20px;"></div>
+        <div style="height: 20px; "></div>
     </div>
 </div>
 
